--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
  }
 
 .navbar {
-    min-width: 905px;
+    min-width: 900px;
     position: relative;
     font-size: 12px;
     height: 60px;
@@ -82,7 +82,7 @@
     font-size: inherit;
     position: absolute;
     width: 100%;
-    min-width: 905px;
+    min-width: 900px;
 }
 .nav-logo {
     position: absolute;
